RESOLVED FIXED235753
Render U+2028 LINE SEPARATOR as a forced line break
https://bugs.webkit.org/show_bug.cgi?id=235753
Summary Render U+2028 LINE SEPARATOR as a forced line break
Fuqiao Xue
Reported 2022-01-27 19:53:48 PST
Per CSS spec, U+2028 LINE SEPARATOR should be treated as a forced break. See https://github.com/w3c/csswg-drafts/issues/6992. Currently, it is not rendered in WebKit.
Attachments
Patch (6.76 KB, patch)
2026-03-20 19:01 PDT, alan
no flags
[fast-cq]Patch (6.67 KB, patch)
2026-03-20 19:03 PDT, alan
no flags
[fast-cq]Patch (6.70 KB, patch)
2026-03-22 05:19 PDT, alan
no flags
Radar WebKit Bug Importer
Comment 1 2022-02-03 19:54:17 PST
Ahmad Saleem
Comment 2 2024-01-30 08:11:09 PST
If I follow GitHub thread, I think this WPT test is relevant for this: https://wpt.live/css/css-text/line-breaking/line-breaking-022.html
Kit Grose
Comment 3 2026-03-18 18:06:37 PDT
Naturally rendering this as a break character would be ideal, but if that is a complex change, it might be sensible to treat it as a whitespace character at least (so words surrounding that character aren't artificially pushed together). That behaviour would mimic how Blink seems to treat the character at the moment.
alan
Comment 4 2026-03-20 19:01:45 PDT
alan
Comment 5 2026-03-20 19:03:46 PDT
Created attachment 478741 [details] [fast-cq]Patch
EWS
Comment 6 2026-03-22 05:07:03 PDT
No reviewer information in commit message, blocking PR #None. Details: [Build #3003](https://ews-build.webkit.org/#/builders/27/builds/3003)
alan
Comment 7 2026-03-22 05:19:29 PDT
Created attachment 478749 [details] [fast-cq]Patch
EWS
Comment 8 2026-03-22 05:36:03 PDT
Committed 309701@main (16c02c3b3c70): <https://commits.webkit.org/309701@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 478749 [details].
Note You need to log in before you can comment on or make changes to this bug.