Render U+2028 LINE SEPARATOR as a forced line break https://bugs.webkit.org/show_bug.cgi?id=235753# <rdar://problem/88470339>

Reviewed by Antti Koivisto.

U+2028 (LINE SEPARATOR) has UAX#14 line breaking class BK, which mandates an unconditional
forced line break per CSS Text Level 3 '5.1.' Unlike U+000A whose treatment as a line break
depends on the white-space property, U+2028 must always break the line - even with
white-space: normal.

Previously U+2028 was not recognized as a breakable position by the inline break iterator,
so it could be silently consumed as part of a non-whitespace run. Fix this by adding
U+2028 to BreakablePositions::isBreakableSpace, which covers both the standard and
word-break:keep-all iterator paths. Also teach InlineItemsBuilder's segment-break handler
and its breaking-positions cache reconstruction path to treat U+2028 as a segment break
that unconditionally emits a forced line break.

Canonical link: https://commits.webkit.org/309701@main